--- a/store/blocks/search.jsonc
+++ b/store/blocks/search.jsonc
@@ -12,11 +12,8 @@
     "children": [
       "breadcrumb.search",
       "search-title.v2",
-      "total-products.v2",
-      "order-by.v2",
       "search-fetch-previous",
-      "search-content",
-      "filter-navigator.v3",
+      "flex-layout.row#results",
       "search-fetch-more"
     ],
      "props": {
@@ -35,5 +32,39 @@
       "filter-navigator.v3",
       "search-fetch-more"
     ]
+  },
+  "flex-layout.row#top": {
+    "children": [
+      "total-products.v2",
+      "order-by.v2"
+    ]
+  },
+  "flex-layout.row#results": {
+    "children": [
+      "flex-layout.col#filter",
+      "flex-layout.col#search"
+    ]
+  },
+  "flex-layout.col#filter": {
+    "children": [
+      "filter-navigator.v3"
+    ],
+    "props": {
+      "width": "20%"
+    }
+  },
+  "flex-layout.col#search": {
+    "children": [
+      "search-content"
+    ],
+    "props": {
+      "width": "80%"
+    }
+  },
+  "search-content": { 
+    "blocks": ["gallery", "not-found"]
+  },
+  "gallery": {
+    "blocks": ["product-summary.shelf"]
   }
  }
