--- a/store/blocks/search.jsonc
+++ b/store/blocks/search.jsonc
@@ -21,24 +21,6 @@
        "preventRouteChange": true
      }
   },
-  "search-result-layout.mobile": {
-    "children": [
-      "breadcrumb.search",
-      "search-title.v2",
-      "total-products.v2",
-      "order-by.v2",
-      "search-fetch-previous",
-      "search-content",
-      "filter-navigator.v3",
-      "search-fetch-more"
-    ]
-  },
-  "flex-layout.row#top": {
-    "children": [
-      "total-products.v2",
-      "order-by.v2"
-    ]
-  },
   "flex-layout.row#results": {
     "children": [
       "flex-layout.col#filter",
@@ -66,5 +48,8 @@
   },
   "gallery": {
     "blocks": ["product-summary.shelf"]
+  },
+  "product-summary.shelf": {
+    "product-summary-sku-selector": true
   }
  }
