--- a/store/blocks/search.jsonc
+++ b/store/blocks/search.jsonc
@@ -12,32 +12,14 @@
     "children": [
       "breadcrumb.search",
       "search-title.v2",
+      "flex-layout.row#top",
       "search-fetch-previous",
       "flex-layout.row#results",
       "search-fetch-more"
     ],
-     "props": {
-       "pagination": "show-more",
-       "preventRouteChange": true
-     }
-  },
-  "search-result-layout.mobile": {
-    "children": [
-      "breadcrumb.search",
-      "search-title.v2",
-      "total-products.v2",
-      "order-by.v2",
-      "search-fetch-previous",
-      "search-content",
-      "filter-navigator.v3",
-      "search-fetch-more"
-    ]
-  },
-  "flex-layout.row#top": {
-    "children": [
-      "total-products.v2",
-      "order-by.v2"
-    ]
+    "props": {
+      "pagination": "show-more"
+    }
   },
   "flex-layout.row#results": {
     "children": [
@@ -45,26 +27,28 @@
       "flex-layout.col#search"
     ]
   },
-  "flex-layout.col#filter": {
-    "children": [
-      "filter-navigator.v3"
-    ],
-    "props":{
-      "width": "20%"
-    }
-  },
-  "flex-layout.col#search": {
-    "children": [
-      "search-content"
-    ],
-    "props":{
-      "width": "80%"
-    }
-  },
   "search-content": { 
     "blocks": ["gallery", "not-found"]
   },
   "gallery": {
     "blocks": ["product-summary.shelf"]
+  },
+  "flex-layout.row#top": {
+    "children": [
+      "total-products.v2",
+      "order-by.v2"
+    ]
+  },
+  "flex-layout.col#filter": {
+    "children":["filter-navigator.v3"],
+    "props":{
+      "width":"20%"
+    }
+  },
+  "flex-layout.col#search": {
+    "children":["search-content"],
+    "props":{
+      "width":"80%"
+    }
   }
  }
