--- a/store/blocks/about-us.jsonc
+++ b/store/blocks/about-us.jsonc
@@ -2,7 +2,7 @@
     "store.custom#about-us": {
       "blocks": [
         "flex-layout.row#about-us",
-        "tab-layout"
+        "tab-layout#home"
       ]
     },
     "flex-layout.row#about-us": {
@@ -38,19 +38,19 @@
         "maxHeight": "600px"
       }
     },
-    "tab-layout": {
+    "tab-layout#home": {
       "children": [
-        "tab-list",
-        "tab-content"
+        "tab-list#home",
+        "tab-content#home"
       ]
     },
-    "tab-list": {
+    "tab-list#home": {
       "children": [
         "tab-list.item#home1",
         "tab-list.item#home2"
         ]
     },
-    "tab-content": {
+    "tab-content#home": {
       "children": [
         "tab-content.item#home1",
         "tab-content.item#home2"
