--- a/store/blocks/about-us.jsonc
+++ b/store/blocks/about-us.jsonc
@@ -66,12 +66,12 @@
     "tab-list.item#home2": {
       "props": {
         "tabId": "electronics",
-        "label": "Electronics"
+        "label": "Instagram"
       }
     },
     "tab-content.item#home1": {
       "children": [
-        "rich-text#home1"
+        "rich-text#home2"
       ],
       "props": {
         "tabId": "majorAppliances"
@@ -79,7 +79,7 @@
     },
     "tab-content.item#home2": {
       "children": [
-        "rich-text#home2"
+        "iframe"
       ],
       "props": {
         "tabId": "electronics"
@@ -96,6 +96,13 @@
         "text": "Área do conteúdo da tab-list.item com  tabId = electronics",
         "textPosition": "CENTER",
         "font": "t-heading-3"
+      }
+    },
+    "iframe": {
+      "props": {
+        "src": "https://www.instagram.com/p/B37Zfd6FobU/embed",
+        "width": "800px",
+        "heigth": "1000px"
       }
     }
    }
