--- a/store/blocks/about-us.jsonc
+++ b/store/blocks/about-us.jsonc
@@ -101,8 +101,8 @@
     "iframe": {
       "props": {
         "src": "https://www.instagram.com/p/B37Zfd6FobU/embed",
-        "width": "800px",
-        "heigth": "1000px"
+        "width": 800,
+        "heigth": 1000 
       }
     }
    }
